<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/cloasAllItem"
        android:icon="@drawable/btn_close"
        android:title="@string/close_all"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/backgroundMenu"
        android:icon="@drawable/btn_background_fill"
        android:title="@string/toggle_background"
        app:showAsAction="always" />

    <item
        android:id="@+id/borderMenu"
        android:icon="@drawable/btn_border_thin"
        android:title="@string/toggle_border"
        app:showAsAction="always" />

    <item
        android:id="@+id/flipItem"
        android:checkable="true"
        android:title="@string/allow_flip"
        app:showAsAction="never" />

    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/checkForUpdateItem"
                android:title="@string/check_for_update"
                app:showAsAction="never" />

            <item
                android:id="@+id/aboutItem"
                android:title="@string/about"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>